--- a/Selectores/index.html
+++ b/Selectores/index.html
@@ -12,15 +12,28 @@
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat placeat eligendi veniam vitae dolore repellat, assumenda nesciunt, vero obcaecati magnam ipsa. Alias illo quaerat molestiae illum. Expedita voluptatem obcaecati veniam?
     </p>
-    <ul>
-      <li class="Faltante">Harina</li>
-      <li>Aceites</li>
-      <li>Leche</li>
-      <li class="Faltante">Sal</li>
-      <li id="ingrediente-secreto">Levadura</li>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
 
-    </ul>
+
+    <div>
+      <form class="formulario">
+        <input class="formulario_input" type="text" placeholder="Escribe tu nombre" required >
+        <input class="formulario_input" type="password" placeholder="Escribe tu contrasena" required >
+        <input class="formulario_input" type="email" placeholder="Escribe tu email" required >
+        <input class="formulario_input formulario_submit" type="submit">
+      </form>
+
+    </div>
+
+    <div>
+
     <li>Harina</li>
     <li>Aceites</li>
+
+    </div>
+    
  </body>
  </html>
